FEAT: Criado a parte de requisição a Api utilizada no projeto e feito o tratamento dos dados recebidos, deixando o sistema totalmente funcional

--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -4,10 +4,10 @@
     right: 10%;
     font-weight: bold;
     display: flex;
-}
 
-.menu a {
-    text-decoration: none;
+    a {
+        text-decoration: none;
+    }
 }
 
 .social {
