--- a/src/components/ModalLink/styles.scss
+++ b/src/components/ModalLink/styles.scss
@@ -8,15 +8,10 @@
     display: flex;
     flex-direction: column;
     animation: slideY 1.5s;
-}
 
-//Animação Slide
-@keyframes slideY {
-    from{
-        transform: translateY(90px);
-    }
-    to{
-        transform: translateY(0);
+    span {
+        margin: 14px 0;
+        color: #a7a7a7;
     }
 }
 
@@ -24,22 +19,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
 
-.modal_header h2 {
-    font-weight: bold;
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+    h2 {
+        font-weight: bold;
+        font-size: 20px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
 
-.modal_header button {
-    border: 0;
-    background: transparent;
-}
-
-.modal_container span {
-    margin: 14px 0;
-    color: #a7a7a7;
+    button {
+        border: 0;
+        background: transparent;
+    }
 }
 
 .modal_link {
@@ -54,8 +44,19 @@
     color: #FFF;
 }
 
-@media (max-width: 735px){
+@media (max-width: 735px) {
     .modal_container {
         width: 90%;
+    }
+}
+
+//Animação Slide
+@keyframes slideY {
+    from {
+        transform: translateY(90px);
+    }
+
+    to {
+        transform: translateY(0);
     }
 }
