--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,4 +1,4 @@
-.container_home{
+.container_home {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -12,27 +12,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    img {
+        width: 40%;
+        border-radius: 25px;
+        margin-bottom: 15px;
+    }
+
+    h1 {
+        font-size: 35px;
+        font-weight: bold;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: #FFF;
+    }
+
+    span {
+        color: #FFF;
+        margin-top: 14px;
+        margin-bottom: 34px;
+        font-size: 19px;
+    }
 }
 
-.logo img {
-    width: 40%;
-    border-radius: 25px;
-    margin-bottom: 15px;
-}
-
-.logo h1{
-    font-size: 35px;
-    font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #FFF;
-}
-
-.logo span {
-    color: #FFF;
-    margin-top: 14px;
-    margin-bottom: 34px;
-    font-size: 19px;
-}
 
 .area-input {
     width: 540px;
@@ -40,76 +41,80 @@
     flex-direction: column;
     align-items: center;
     animation: slideY 2s;
+
+    div {
+        width: 100%;
+        height: 46px;
+        background-color: rgb(255, 255, 255, 0.15);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4px;
+    }
+
+    svg {
+        margin: 0 8px;
+    }
+
+    input {
+        width: 100%;
+        background: transparent;
+        border: 0;
+        height: 46px;
+        color: #FFF;
+        outline: none;
+        font-size: 18px;
+    }
+
+    input::placeholder {
+        color: rgb(255, 255, 255, 0.8);
+    }
+
+    button {
+        width: 100%;
+        height: 46px;
+        border-radius: 4px;
+        border: 0;
+        font-size: 16px;
+        color: #000;
+        font-weight: bold;
+        margin-top: 8px;
+        transition: transform 0.7s;
+    }
+
+    button:hover {
+        transform: scale(1.05);
+    }
 }
+
+@media (max-width: 615px) {
+    .logo {
+        img {
+            width: 95px;
+        }
+
+        h1 {
+            font-size: 25px;
+        }
+
+        span {
+            font-size: 16px;
+        }
+    }
+
+    .area-input {
+        width: 85%;
+    }
+}
+
 
 //Animação que faz a area input subir lentamente
 @keyframes slideY {
-    from{
+    from {
         transform: translateY(90px);
     }
-    to{
+
+    to {
         transform: translateY(0px);
     }
-}
-
-.area-input div {
-    width:  100%;
-    height: 46px;
-    background-color: rgb(255, 255, 255, 0.15);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-}
-
-.area-input svg {
-    margin: 0 8px;
-}
-
-.area-input input {
-    width: 100%;
-    background: transparent;
-    border: 0;
-    height: 46px;
-    color: #FFF;
-    outline: none;
-    font-size: 18px;
-}
-
-.area-input input::placeholder {
-    color: rgb(255, 255, 255, 0.8);
-}
-
-.area-input button {
-    width: 100%;
-    height: 46px;
-    border-radius: 4px;
-    border: 0;
-    font-size: 16px;
-    color: #000;
-    font-weight: bold;
-    margin-top: 8px;
-    transition: transform 0.7s;
-}
-
-.area-input button:hover{
-    transform: scale(1.05);
-}
-
-@media (max-width: 615px){
-    .logo img{
-        width: 95px;
-    }
-
-    .logo h1{
-        font-size: 25px;
-    }
-    .logo span{
-        font-size: 16px;
-    }
-
-    .area-input{
-        width: 85%;
-    }
-
 }
